Added actual links for 3 of the entries and also "target=_blank" attribute to each portfolio entry

--- a/css/main.css
+++ b/css/main.css
@@ -44,19 +44,19 @@ a:link, a:visited, a:hover, a:active {
     transition: width 0s ease, background .5s ease;
 }
 #menu a:after {
-    content: '';
-    display: block;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    height: 3px;
-    width: 0;
-    background: #718aa6;
+    content:    '';
+    display:    block;
+    position:   absolute;
+    right:      0;
+    bottom:     0;
+    height:     3px;
+    width:      0;
+    background: rgb(113, 138, 166);
     transition: width .5s ease;
 }
 #menu a:hover:before {
-    width: 100%;
-    background: #718aa6;
+    width:      100%;
+    background: rgb(113, 138, 166);
     transition: width .5s ease;
 }
 #menu a:hover:after {
@@ -95,7 +95,7 @@ a:link, a:visited, a:hover, a:active {
     margin: 0 0.2rem;
     float: right;
 }
-#portfolio_heading {
+.portfolio_heading {
     max-width: 15%;
     margin: 3rem auto;
     padding: 1.25rem;
@@ -107,13 +107,13 @@ a:link, a:visited, a:hover, a:active {
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 .entry_bg {
-    background-color: #e9ecef;
-    height: 90%;
-    margin: 3rem auto;
-    padding: 1.25rem 1rem;
+    background-color:   rgb(233, 236, 239);
+    height:             90%;
+    margin:             3rem auto;
+    padding:            1.25rem 1rem;
     -webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-    -moz-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    -moz-box-shadow:    0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    box-shadow:         0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 .entry_image {
     opacity: 1;
@@ -121,27 +121,30 @@ a:link, a:visited, a:hover, a:active {
     backface-visibility: hidden;
 }
 .middle {
-    transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%)
+    transition:       .5s ease;
+    opacity:          0;
+    position:         absolute;
+    background-color: rgb(255, 255, 255);
+    border-radius: 5px;
+    top:              50%;
+    left:             50%;
+    transform:        translate(-50%, -50%);
+    -ms-transform:    translate(-50%, -50%)
 }
 .entry_info {
-    color: #718aa6;
+    color:     rgb(113, 138, 166);
     font-size: 1rem;
+    padding: 1rem;
 }
 .portfolio_detail:hover .entry_image {
-    opacity: 0.2;
+    opacity: 0.1;
 }
 .portfolio_detail:hover .middle {
     opacity: 1;
 }
 .footer {
-    height: 7rem;
-    width: 100%;
-    margin-top: 3rem;
-    background-color: #ebedf0;
+    height:           7rem;
+    width:            100%;
+    margin-top:       3rem;
+    background-color: rgb(235, 237, 240);
 }
