--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 body {
-    font-family: 'Open-Sans', sans-serif;
-    color: #000;
+  color: #000;
+  font-family: 'Open-Sans', sans-serif;
 }
 a:link, a:visited, a:hover, a:active {
-    text-decoration: none;
-    color: #000;
+  color: #000;
+  text-decoration: none;
 }
 #logo {
     font-size: 2rem;
@@ -27,6 +27,7 @@ a:link, a:visited, a:hover, a:active {
 #menu li {
     display: inline-block;
     font-size: 1.5rem;
+    padding-left: 1rem;
 }
 #menu a {
     display: inline-block;
