--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,6 @@ a:link, a:visited, a:hover, a:active {
 #menu a {
   display: inline-block;
   position: relative;
-  padding-bottom: 3px;
 }
 #menu a:before {
   content: '';
@@ -150,8 +149,11 @@ a:link, a:visited, a:hover, a:active {
   opacity: 1;
 }
 .footer {
-  min-height:           10rem;
-  width:            100%;
-  margin-top:       3rem;
+  min-height: 10rem;
+  width: 100%;
+  padding: 3rem;
   background-color: rgb(235, 237, 240);
+}
+.footer form {
+  margin: 3rem;
 }
