--- a/css/newstyle.css
+++ b/css/newstyle.css
@@ -51,16 +51,62 @@ body {
   position: relative;
   min-height: 1600px;
 }
-#portfolio_link {
-  color: #808080;
-  padding: 2rem;
+.portfolio_heading {
+  max-width: 60%;
+  height: 30%;
+  margin: 2rem auto 0 auto;
+  padding: 1.25rem;
+  -webkit-border-radius: 100px / 50px;
+  -moz-border-radius: 100px / 50px;
+  border-radius: 100px / 50px;
+  -webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  -moz-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 .portfolio_entry {
+  color: #808080;
   height: 20rem;
   margin: 2rem auto;
   box-shadow: 0 0 10px #808080;
-  color: #808080;
-  line-height: 15rem;
+}
+/*.entry_bg {
+  background-color:   rgb(233, 236, 239);
+  height:             23rem;
+  margin:             3rem auto;
+  padding:            1rem;
+  -webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  -moz-box-shadow:    0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  box-shadow:         0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}*/
+.entry_bg h3 {
+  margin: 0;
+}
+.entry_image {
+  opacity: 1;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+.middle {
+  transition:       .5s ease;
+  opacity:          0;
+  position:         absolute;
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+  top:              55%;
+  left:             50%;
+  transform:        translate(-50%, -50%);
+  -ms-transform:    translate(-50%, -50%)
+}
+.entry_info {
+  color:     rgb(113, 138, 166);
+  font-size: 1rem;
+  padding: 0.5rem;
+}
+.portfolio_detail:hover .entry_image {
+  opacity: 0.1;
+}
+.portfolio_detail:hover .middle {
+  opacity: 1;
 }
 footer {
   width: 100%;
