--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,7 @@ a:link, a:visited, a:hover, a:active {
   -moz-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
-#head_shot {
+.head_shot {
   position: absolute;
   top: -3.5rem;
   z-index: 10;
